# berk

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.adoc
script/: build  clean  configure
src/: CMakeLists.txt  main.vala
src/Berk/: Application.vala  Window.vala
